src/objects/Opp_Record_Type_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Renewal_Opp_Record_Type_ID__c</fullName>
        <description>Stores ID of Renewal Opp Record Type</description>
        <inlineHelpText>Stores ID of Renewal Opp Record Type</inlineHelpText>
        <label>Renewal Opp Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Opp_Record_Type_Name__c</fullName>
        <description>Stores Name of Renewal Opp Record Type</description>
        <inlineHelpText>Stores Name of Renewal Opp Record Type</inlineHelpText>
        <label>Renewal Opp Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Opp_Record_Type_ID__c</fullName>
        <description>Stores ID of Source Opp Record Type</description>
        <inlineHelpText>Stores ID of Source Opp Record Type</inlineHelpText>
        <label>Source Opp Record Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Opp_Record_Type_Name__c</fullName>
        <description>Stores Name of Source Opp Record Type</description>
        <inlineHelpText>Stores Name of Source Opp Record Type</inlineHelpText>
        <label>Source Opp Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Opp Record Type Mapping</label>
    <nameField>
        <label>Opp Record Type Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opp Record Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>